# Only4BMS

./: .gitignore  LICENSE  MULTIPLAYER_API.md  README.md  _config.yml  agents.md  pyproject.toml  requirements.txt  validate_i18n.py
.github/workflows/: build_macos.yml  build_release.yml  build_windows.yml  deploy_itchio.yml
docs/: README.de.md  README.es.md  README.fr.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.th.md  README.zh.md
example_server/: app.py
mods/: MOD_GUIDE.md
mods/course_mode/: __init__.py  course_generator.py  course_menu.py  course_session.py  extension.py  i18n.py
mods/online_multiplay/: __init__.py  extension.py  i18n.py  multiplayer_menu.py
src/only4bms/: __init__.py  bms_parser.py  i18n.py  main.py  main_menu.py  mod_loader.py  paths.py  rhythm_game.py  settings_menu.py  song_select_menu.py
src/only4bms/ai/: README.md  env.py  inference.py  train.py
src/only4bms/core/: bms_parser.py  network_manager.py
src/only4bms/game/: assets.py  challenge.py  constants.py  course_generator.py  course_session.py  engine.py  game_extension.py  renderer.py  rhythm_game.py  video_player.py
src/only4bms/ui/: calibration_menu.py  challenge_menu.py  course_menu.py  key_config_menu.py  main_menu.py  multiplayer_menu.py  settings_menu.py  song_select_menu.py
tests/: conftest.py  test_bms_parser.py  test_rhythm_game.py
